test(gupy): align mapper test types